--- a/source/common/http/BUILD
+++ b/source/common/http/BUILD
@@ -126,6 +126,7 @@ envoy_cc_library(
         "//source/common/http/access_log:request_info_lib",
         "//source/common/http/http1:codec_lib",
         "//source/common/http/http2:codec_lib",
+        "//source/common/http:connect_handler_lib",
         "//source/common/http/websocket:ws_handler_lib",
         "//source/common/network:utility_lib",
         "//source/common/runtime:uuid_util_lib",
@@ -169,6 +170,29 @@ envoy_cc_library(
         "//source/common/common:utility_lib",
     ],
 )
+
+envoy_cc_library(
+    name = "connect_handler_lib",
+    srcs = ["http1_connect_handler.cc"],
+    hdrs = ["http1_connect_handler.h"],
+    deps = [
+        "//include/envoy/http:codec_interface",
+        "//include/envoy/http:header_map_interface",
+        "//include/envoy/http:wshandler_callback_interface",
+        "//include/envoy/network:connection_interface",
+        "//include/envoy/network:filter_interface",
+        "//include/envoy/router:router_interface",
+        "//include/envoy/upstream:cluster_manager_interface",
+        "//source/common/common:enum_to_int",
+        "//source/common/filter:tcp_proxy_lib",
+        "//source/common/http:codes_lib",
+        "//source/common/http:header_map_lib",
+        "//source/common/http/http1:codec_lib",
+        "//source/common/http/websocket:ws_handler_lib",
+    ],
+)
+
+
 
 envoy_cc_library(
     name = "headers_lib",
